[gd_scene load_steps=30 format=3 uid="uid://ptrhcnpxicmj"]

[ext_resource type="Script" uid="uid://cbe2ese6g7uqt" path="res://scripts/root.gd" id="1_3hfy5"]
[ext_resource type="Texture2D" uid="uid://pg7ex3gchc4f" path="res://resources/sprites/ipod.png" id="1_twpsu"]
[ext_resource type="PackedScene" uid="uid://c5vjmaxosdxge" path="res://scenes/ipod_control.tscn" id="2_twpsu"]
[ext_resource type="Texture2D" uid="uid://c3h6whop6jom4" path="res://resources/sprites/menu-button.png" id="4_y3xxt"]
[ext_resource type="Texture2D" uid="uid://cho6dibjlp231" path="res://resources/sprites/next-fast-forward.png" id="5_y3xxt"]
[ext_resource type="Texture2D" uid="uid://b2837ol2qx47a" path="res://resources/sprites/play-pause.png" id="6_3hfy5"]
[ext_resource type="Texture2D" uid="uid://do8demo2e60h4" path="res://resources/sprites/previous-rewind.png" id="7_7pvxh"]
[ext_resource type="Texture2D" uid="uid://xla01shyw243" path="res://resources/sprites/scroll-wheel.png" id="8_7pvxh"]
[ext_resource type="Texture2D" uid="uid://bo5isxm8n1get" path="res://resources/sprites/select-button.png" id="9_y3xxt"]
[ext_resource type="AudioStream" uid="uid://dgq6nc0jrt8g" path="res://resources/audio/select-button-press.wav" id="12_l5cgh"]
[ext_resource type="AudioStream" uid="uid://dq6pe8irvv3u8" path="res://resources/audio/select-button-release.wav" id="13_vgks2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_log26"]
atlas = ExtResource("4_y3xxt")
region = Rect2(0, 0, 58, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt4lb"]
atlas = ExtResource("4_y3xxt")
region = Rect2(0, 20, 58, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_jh1ax"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_log26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt4lb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ya6yc"]
atlas = ExtResource("5_y3xxt")
region = Rect2(0, 0, 20, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_mflgo"]
atlas = ExtResource("5_y3xxt")
region = Rect2(20, 0, 20, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_lrqlo"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya6yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mflgo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y3xxt"]
atlas = ExtResource("6_3hfy5")
region = Rect2(0, 0, 58, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsp7o"]
atlas = ExtResource("6_3hfy5")
region = Rect2(0, 20, 58, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_y3xxt"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3xxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsp7o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_34frw"]
atlas = ExtResource("7_7pvxh")
region = Rect2(0, 0, 20, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ui5n"]
atlas = ExtResource("7_7pvxh")
region = Rect2(20, 0, 20, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_l5cgh"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34frw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ui5n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_l5cgh"]
atlas = ExtResource("8_7pvxh")
region = Rect2(0, 0, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgks2"]
atlas = ExtResource("8_7pvxh")
region = Rect2(62, 0, 62, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_kycxp"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5cgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgks2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dylgi"]
atlas = ExtResource("9_y3xxt")
region = Rect2(0, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrhyn"]
atlas = ExtResource("9_y3xxt")
region = Rect2(22, 0, 22, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_j287u"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dylgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrhyn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Root" type="Node"]
script = ExtResource("1_3hfy5")

[node name="iPod" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_twpsu")

[node name="ScrollTimer" type="Timer" parent="iPod"]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="MenuButton" parent="iPod" instance=ExtResource("2_twpsu")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 19.0
offset_top = 67.0
offset_right = 77.0
offset_bottom = 87.0
texture = SubResource("AtlasTexture_log26")
sprite_frames = SubResource("SpriteFrames_jh1ax")

[node name="NextFastForward" parent="iPod" instance=ExtResource("2_twpsu")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 69.0
offset_top = 79.0
offset_right = 89.0
offset_bottom = 137.0
texture = SubResource("AtlasTexture_ya6yc")
sprite_frames = SubResource("SpriteFrames_lrqlo")

[node name="PlayPause" parent="iPod" instance=ExtResource("2_twpsu")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 19.0
offset_top = 129.0
offset_right = 77.0
offset_bottom = 149.0
texture = SubResource("AtlasTexture_y3xxt")
sprite_frames = SubResource("SpriteFrames_y3xxt")

[node name="PreviousRewind" parent="iPod" instance=ExtResource("2_twpsu")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 79.0
offset_right = 27.0
offset_bottom = 137.0
texture = SubResource("AtlasTexture_34frw")
sprite_frames = SubResource("SpriteFrames_l5cgh")

[node name="ScrollWheel" parent="iPod" instance=ExtResource("2_twpsu")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 17.0
offset_top = 77.0
offset_right = 79.0
offset_bottom = 139.0
texture = SubResource("AtlasTexture_l5cgh")
sprite_frames = SubResource("SpriteFrames_kycxp")
press_stream = null
release_stream = null

[node name="SelectButton" parent="iPod" instance=ExtResource("2_twpsu")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 37.0
offset_top = 97.0
offset_right = 59.0
offset_bottom = 119.0
texture = SubResource("AtlasTexture_dylgi")
sprite_frames = SubResource("SpriteFrames_j287u")
press_stream = ExtResource("12_l5cgh")
release_stream = ExtResource("13_vgks2")
